--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -34,17 +34,18 @@
                 android:id="@+id/movies_rv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:visibility="@{viewmodel.isDataLoadingError? View.GONE: View.VISIBLE }"
                 app:items="@{viewmodel.items}" />
 
             <TextView
-                android:id="@+id/movies_no_internet_view"
+                android:id="@+id/noMovies"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/side_margin"
                 android:layout_marginStart="@dimen/side_margin"
                 android:text="@string/no_internet"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
-                android:visibility="gone"
+                android:visibility="@{viewmodel.isDataLoadingError? View.VISIBLE : View.GONE}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
