--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -41,8 +41,8 @@
                 android:id="@+id/noMovies"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/side_margin"
-                android:layout_marginStart="@dimen/side_margin"
+                android:layout_marginEnd="@dimen/details_top_margin"
+                android:layout_marginStart="@dimen/details_top_margin"
                 android:text="@string/no_internet"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                 android:visibility="@{viewmodel.isDataLoadingError? View.VISIBLE : View.GONE}"
