--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <resources>
-    <dimen name="side_margin">8dp</dimen>
-    <dimen name="general_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="details_general_margin">16dp</dimen>
+
+    <dimen name="details_top_margin">8dp</dimen>
 </resources>
