--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -14,15 +14,14 @@
             type="com.baikaleg.v3.popularmovies2.ui.details.DetailsViewModel" />
     </data>
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.baikaleg.v3.popularmovies.ui.details.DetailsFragment"
         tools:showIn="@layout/activity_details">
 
-        
+
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -53,8 +52,8 @@
 
                 <ImageView
                     android:id="@+id/details_img"
-                    image="@{viewmodel.url}"
                     height="@{viewmodel.height}"
+                    image="@{viewmodel.url}"
                     width="@{viewmodel.width}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -90,6 +89,14 @@
                         android:layout_marginTop="@dimen/details_top_margin"
                         android:text="@{@string/vote_average(viewmodel.voteAverage)}"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
+
+                    <ImageView
+                        android:id="@+id/details_favorite_ib"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/cd_favorite"
+                        android:onClick="@{()->viewmodel.favoriteClicked()}"
+                        android:src="@{viewmodel.favorite ? @drawable/ic_favorite : @drawable/ic_unfavorite}" />
                 </LinearLayout>
 
             </RelativeLayout>
