--- a/app/src/main/res/layout/item_movies.xml
+++ b/app/src/main/res/layout/item_movies.xml
@@ -1,4 +1,5 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -17,8 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/cd_poster_of_movie"
-            image="@{viewmodel.url}"
-            height="@{viewmodel.height}"
-            width="@{viewmodel.width}"/>
+            app:image="@{viewmodel.url}"
+            app:image_height="@{viewmodel.height}"
+            app:image_width="@{viewmodel.width}"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
