--- a/app/src/main/res/layout-land/fragment_details.xml
+++ b/app/src/main/res/layout-land/fragment_details.xml
@@ -49,19 +49,16 @@
             <LinearLayout
                 android:id="@+id/details_trailers_container"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/details_general_margin"
-                android:layout_marginLeft="@dimen/details_general_margin"
-                android:layout_marginRight="@dimen/details_general_margin"
                 android:layout_marginStart="@dimen/details_general_margin"
                 android:layout_marginTop="@dimen/details_top_margin"
-                android:visibility="@{viewmodel.pagerExpanded||viewmodel.dataLoading? View.GONE: View.VISIBLE}"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 app:layout="@{viewmodel.trailerLayout}"
-                app:layout_constraintBottom_toBottomOf="@+id/details_main_img"
+                android:visibility="@{viewmodel.pagerExpanded||viewmodel.dataLoading? View.GONE: View.VISIBLE}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/details_main_img"
-                app:layout_constraintTop_toBottomOf="@+id/details_rating_tv"
+                app:layout_constraintTop_toBottomOf="@+id/details_date_tv"
                 app:trailers="@{viewmodel.trailersList}" />
 
             <ImageView
@@ -105,14 +102,15 @@
                 android:id="@+id/details_rating_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/details_general_margin"
-                android:layout_marginStart="@dimen/details_general_margin"
+                android:layout_marginEnd="@dimen/details_general_margin"
                 android:layout_marginTop="@dimen/details_top_margin"
                 android:text="@{@string/vote_average(viewmodel.voteAverage)}"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:visibility="@{viewmodel.pagerExpanded||viewmodel.dataLoading? View.GONE: View.VISIBLE}"
-                app:layout_constraintStart_toEndOf="@+id/details_main_img"
-                app:layout_constraintTop_toBottomOf="@+id/details_date_tv" />
+                app:layout_constraintBottom_toBottomOf="@+id/details_date_tv"
+                app:layout_constraintTop_toTopOf="@+id/details_date_tv"
+                app:layout_constraintEnd_toStartOf="parent"
+                android:layout_marginRight="@dimen/details_general_margin" />
 
             <ProgressBar
                 android:id="@+id/details_progress"
@@ -127,30 +125,29 @@
 
             <TextView
                 android:id="@+id/details_overview_header_tv"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginEnd="@dimen/details_general_margin"
-                android:layout_marginStart="@dimen/details_general_margin"
                 android:layout_marginTop="@dimen/details_top_margin"
                 android:text="@string/overview"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:visibility="@{viewmodel.pagerExpanded||viewmodel.dataLoading? View.GONE: View.VISIBLE}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/details_main_img" />
+                app:layout_constraintEnd_toEndOf="@+id/details_trailers_container"
+                app:layout_constraintStart_toStartOf="@+id/details_trailers_container"
+                app:layout_constraintTop_toBottomOf="@+id/details_trailers_container" />
 
             <TextView
                 android:id="@+id/details_overview_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/details_general_margin"
-                android:layout_marginStart="@dimen/details_general_margin"
-                android:layout_marginTop="@dimen/details_top_margin"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+
                 android:text="@{viewmodel.overview}"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:visibility="@{viewmodel.pagerExpanded||viewmodel.dataLoading? View.GONE: View.VISIBLE}"
+                app:layout_constraintBottom_toBottomOf="@+id/details_main_img"
+                app:layout_constraintEnd_toEndOf="@+id/details_overview_header_tv"
+                app:layout_constraintStart_toStartOf="@+id/details_overview_header_tv"
                 app:layout_constraintTop_toBottomOf="@+id/details_overview_header_tv" />
 
             <TextView
@@ -161,13 +158,13 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginEnd="@dimen/details_general_margin"
                 android:layout_marginStart="@dimen/details_general_margin"
-                android:layout_marginTop="@dimen/details_general_margin"
+                android:layout_marginTop="@dimen/details_top_margin"
                 android:text="@{@string/review_header(viewmodel.currentPagerPage,viewmodel.reviewsList.size())}"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:visibility="@{viewmodel.dataLoading? View.GONE: View.VISIBLE}"
-                app:layout_constraintEnd_toStartOf="@+id/details_pager_container_resize_btn"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/details_overview_tv" />
+                app:layout_constraintTop_toBottomOf="@+id/details_main_img" />
 
             <View
                 android:id="@+id/detail_pager_divider"
